# aos-dispatcher

./: README.md  azure.yaml  pyproject.toml
.github/instructions/: azure-functions.instructions.md
.github/prompts/: azure-expert.md
.github/skills/azure-functions/: SKILL.md
.github/spec/: repository.md
.github/specs/: repository.md  skills.md
.github/workflows/: ci.yml  deploy.yml
azure_functions/: function_app.py  host.json  pyproject.toml
docs/: api-reference.md  architecture.md  contributing.md  rest_api.md
src/: function_app.py
src/aos_dispatcher/: __init__.py  dispatcher.py
tests/: __init__.py  test_azure_functions_infrastructure.py  test_dispatcher.py  test_function_app.py
