[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aos-dispatcher"
version = "4.0.0"
description = "AOS Dispatcher — the central HTTP/Service Bus dispatcher for the Agent Operating System. Routes requests to the kernel, exposes orchestration and enterprise service APIs as Azure Functions. (Renamed from aos-function-app v3.1.0; backward compatibility not required.)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "aos-kernel[azure]>=3.0.0",
    "azure-functions>=1.21.0",
    "azure-servicebus>=7.12.0",
    "agent-framework>=1.0.0rc1",
    "agent-framework-orchestrations>=1.0.0b260219",
    "agent-framework-azurefunctions>=1.0.0b260219",
]

[project.optional-dependencies]
intelligence = [
    "aos-intelligence[foundry]>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pylint>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-dispatcher"
Documentation = "https://github.com/ASISaga/aos-dispatcher/tree/main/docs"
Repository = "https://github.com/ASISaga/aos-dispatcher"
