[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aos-dispatcher"
version = "4.0.0"
description = "AOS Dispatcher — pure Python dispatcher library for the Agent Operating System. Framework-agnostic core that routes orchestration requests and exposes enterprise service APIs. Import this library from any hosting environment (Azure Functions, FastAPI, etc.)."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "aos-kernel[azure]>=3.0.0",
    "agent-framework>=1.0.0rc1",
    "agent-framework-orchestrations>=1.0.0b260219",
]

[project.optional-dependencies]
intelligence = [
    "aos-intelligence[foundry]>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pylint>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--ignore=tests/test_azure_functions_infrastructure.py"

[project.urls]
Homepage = "https://github.com/ASISaga/aos-dispatcher"
Documentation = "https://github.com/ASISaga/aos-dispatcher/tree/main/docs"
Repository = "https://github.com/ASISaga/aos-dispatcher"
