[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aos-dispatcher-azure"
version = "4.0.0"
description = "Azure Functions wrapper for the AOS Dispatcher. Thin bindings that expose the aos-dispatcher library as Azure HTTP endpoints and Service Bus triggers. Intended to be deployed as part of the agent-operating-system Azure Functions app."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "aos-dispatcher>=4.0.0",
    "azure-functions>=1.21.0",
    "azure-servicebus>=7.12.0",
    "agent-framework-azurefunctions>=1.0.0b260219",
]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-dispatcher"
Repository = "https://github.com/ASISaga/aos-dispatcher"
